# fastapi-hotels

./: .dockerignore  .env-test  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose-prod.yaml  docker-compose.yaml  initial.sql  main.py  pyproject.toml  pytest.ini  setup.cfg
docker/app/: .dockerignore  Dockerfile
docker/dev/app/: Dockerfile
docker/mongo/: init_mongo.js
docker/prod/app/: Dockerfile  entrypoint.sh
docker/prod/mongo/: init_mongo.js
migrations/: __models__.py  env.py
migrations/versions/: 2023_08_30_1019-96316a80c893_initial.py  2023_08_30_1140-9033f52e88a2_users_rooms_bookings.py  2023_09_07_1534-459d815c891c_user_add_is_active.py  2023_09_10_1448-7c93ed621c94_added_admin_props_to_user.py  2023_09_12_2002-3b19c108c191_added_favourite.py
src/: admin.py  app.py  cache.py  config.py  database.py  logging.py  middlewares.py  utils.py
src/auth/: config.py  dependencies.py  exceptions.py  jwt.py  models.py  repositories.py  routers.py  schemas.py  services.py
src/base/: exceptions.py  models.py  permissions.py  repositories.py  schemas.py  utils.py
src/bookings/: admin.py  dependencies.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py
src/celery/: celery.py
src/celery/tasks/: emails.py  images.py
src/celery_conf/: celery.py
src/celery_conf/tasks/: emails.py  images.py
src/hotels/: admin.py  dependencies.py  models.py  repositories.py  schemas.py  services.py
src/hotels/routers/: hotels.py  rooms.py
src/images/: exceptions.py  routers.py
src/pages/: __init__.py  auth.py  bookings.py  hotels.py
src/users/: admin.py  dependencies.py  exceptions.py  models.py  repositories.py  schemas.py  services.py
static/js/app_base/: base.js
static/js/auth/: activate.js  email_code.js  login.js  recovery.js  register.js
static/js/base/: base.js
static/js/bookings/: create.js  my.js  my_detail.js
static/js/hotels/: favourites.js  rooms.js  search.js
templates/: app_base.html  app_header.html  base.html
templates/auth/: activate.html  email_code.html  login.html  recovery.html  register.html
templates/bookings/: create.html  my.html  my_detail.html
templates/hotels/: favourites.html  rooms.html  search.html
tests/: conftest.py
tests/api_tests/test_auth/: test_api.py
tests/fixtures/: auth.py  client.py  users.py
tests/unit_tests/test_auth/: test_services.py
tests/unit_tests/test_base/: test_override.py
tests/unit_tests/test_users/: test_services.py
